--- a/css/index.css
+++ b/css/index.css
@@ -69,6 +69,8 @@ p {
 /* end */
 nav {
 display: flex;
+padding-left: 10%;
+line-height: 3;
 }
 header {
     display: flex;
@@ -76,14 +78,15 @@ header {
 
 }
 .navlinks {
-padding: 5%;
+padding: 0 10% 0 50px ;
 color: black;
 text-decoration: none;
 font-size: 13px;
 }
 
 .image {
-
+width: 100%;
+padding: 2%;
 }
 /* Dont mark beyond point */
 .container {
