--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,4 @@
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -65,104 +66,92 @@ h1, h2, h3, h4, h5 {
 p {
     line-height: 1.4;
 }
-
-/* end */
+/* start code here */
 nav {
-display: flex;
-padding-left: 10%;
-line-height: 3;
-}
-header {
     display: flex;
-    padding: 2%;
-
+    padding-left: 10%;
+    line-height: 3;
+    }
+    header {
+        display: flex;
+        padding: 2%;
+    
+    }
+    .navlinks {
+    padding: 0 10% 0 50px ;
+    color: black;
+    text-decoration: none;
+    font-size: 13px;
+    }
+    
+    .container-about-page {
+        width: 100%;
+        padding: 5%;
+    }
+.together {
+    margin: 5%;
+    margin-left: 10%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
 }
-.navlinks {
-padding: 0 10% 0 50px ;
-color: black;
-text-decoration: none;
-font-size: 13px;
+   button {
+       padding: 1% 5% 1% 5%;
+       border-radius: 6px;
+       border: 2px solid black;
+   }
+.about {
+    padding: 1% 3% 2% 3%;
+   width: 100%;
+    border-bottom: 2px dashed black;
+}
+.strategy {
+    padding: 1%;
+    width: 40%;
+     border-bottom: 2px dashed black;
+}
+.working {
+    padding: 1%;
+    width:40%;
+     border-bottom: 2px dashed black;
+}
+.places {
+    padding: 1%;
+    width: 40%;
+     border-bottom: 2px dashed black;
+}
+.collab {
+    padding: 1%;
+    width: 40%;
+     border-bottom: 2px dashed black;
 }
 
 .image {
-padding:
-}
-/* Lambda School's mark up */
-.container {
-    width: 800px;
-    margin: 0 auto;
-}
-
-.top-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
-}
-
-.top-content .text-container {
-    width: 48%;
-    padding: 0 1%;
-    padding-bottom: 20px;  
-}
-
-.middle-content {
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
-}
-
-.middle-content h2 {
-    padding: 0 2%;
-    margin-bottom: 0;
-}
-
-.middle-content .boxes {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-
-.middle-content .boxes .box {
-    width: 12.5%;
-    height: 100px;
-    background:teal;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.bottom-content {
-    display: flex;
-    margin: 0 2% 20px;
-    justify-content: space-around;
-}
-
-.bottom-content .text-container {
-    padding-right: 4%;
-}
-
-.bottom-content .text-container:last-child {
-    padding-right: 0;
-}
-
-footer {
     width: 100%;
-    background: black;
-}
+    padding: 2%;
+    }
+.info {
+display: flex;
+flex-flow: wrap;
+justify-content: center;
+    }
 
-footer nav {
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 2%;
-    font-size: 14px;
-}
+    footer {
+        width: 100%;
+        background: black;
+    }
+    
+    footer nav {
+        width: 60%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 2%;
+        font-size: 14px;
+    }
+    
+    footer nav a {
+        color: white;
+        text-decoration: none;
+    }
 
-footer nav a {
-    color: white;
-    text-decoration: none;
-}
