--- a/css/about.css
+++ b/css/about.css
@@ -100,6 +100,9 @@ nav {
        border-radius: 6px;
        border: 2px solid black;
    }
+   p {
+       padding:2%;
+   }
 .about {
     padding: 1% 3% 2% 3%;
    width: 100%;
